traer licitaciones con filtros